[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/trading/Itemslot.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.301961, 0.301961, 0.301961, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0, 0.4, 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Itemslot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1800.0
margin_bottom = -960.0
rect_min_size = Vector2( 120, 120 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compare" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Name" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 115.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "name"
clip_text = true

[node name="Stack_Size" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 115.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "stack"
valign = 2
clip_text = true

[node name="Item_Price" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 115.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "price"
align = 2
valign = 2
clip_text = true

[node name="Item_Slot" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 115.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "slot"
align = 2
clip_text = true
[connection signal="mouse_entered" from="." to="." method="_on_Itemslot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Itemslot_mouse_exited"]
